--- a/main.css
+++ b/main.css
@@ -187,35 +187,72 @@ h6 {
        margin-top: 25px;
        color: black;
    }
-
    .contact{
-       margin-top: 600px;
-       margin-left: 7%;
-       max-width: 1200px;
-       margin-bottom: 200px;
+       margin-top: 400px;
    }
-   .contact h1{
-    font-family: Times, serif;
-    font-size: 65px;
-    margin-top: 300px;
-    margin-left: 40%;
+   #contact{
+    margin-left: 45%;
     margin-bottom: 60px;
+    font-size: 65px;
    }
-   form{
-       font-size: 25px;
-       width: 800px;
-       background-color: #B0C4DE;
-       border: 3px solid white;
-       border-radius: 4px;
-       margin-bottom: 5px;
-       padding: 10px;
+
+   input[type=text] {
+    width: 90%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  input[type=email] {
+    width: 90%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  textarea {
+      display: block;
+      margin-bottom: 15px;
+      width: 90%;
+  }
+  
+  input[type=submit] {
+    width: 90%;
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  input[type=submit]:hover {
+    background-color: #0f6d27;
+  }
+  
+  form {
+      width: 50%;
+    border-radius: 5px;
+    background-color: #B0C4DE;
+    padding: 20px;
+    margin-bottom: 180px;
+    margin-left: 100px;
+  }
+   input[type=submit]{
+       margin-top: 3px;
+       background-color: grey;
    }
    .social{
        display: block;
        margin-left: 870px;
        width: 400px;
        height: 200px;
-       margin-top: -300px;
+       margin-top: -400px;
 
    }
    .social a{
@@ -225,9 +262,10 @@ h6 {
     background-color: #B0C4DE;
     height: 25px;
     font-size: 1.2em;
-    color: #fff;
+    color: rgb(19, 2, 2);
     text-align: center;
     padding: 1.5em 2.0em;
+    margin-top: 165px;
     
 }
 footer ul#menuFooter {
@@ -238,7 +276,7 @@ footer ul#menuFooter {
 }
 footer ul li {
     display: inline-block;
-    padding: 0 0.7em 0 0;
+    padding: 0 0.5em 0 0;
     margin: 0;
 }
 footer ul li::before {
@@ -246,7 +284,7 @@ footer ul li::before {
     padding-right: 0.7em;
 }
 footer a, footer a:visited {
-    color: rgb(234, 234, 238);
+    color: rgb(2, 2, 17);
     text-decoration: none;
 }
 footer a:hover {
