--- a/main.css
+++ b/main.css
@@ -97,6 +97,7 @@ h6 {
     margin-left: 40%;
     margin-bottom: 60px;
     text-shadow: 2px 2px grey;
+    padding-top: 60px;
 }
 .container{
     width: 1200px;
@@ -166,18 +167,19 @@ h6 {
     margin-left: 30%;
     font-size: 65px;
     text-shadow: 2px 2px grey;
+    padding-top: 60px;
 }
 /*ABOUT*/
 #description {
-    width: 600px;
-    float: left;
+    align-content: center;
+    width: 850px;
     position: relative;
     display: block;
     background-color: #fff;
     padding: 1.7em 0.5em 2.0em 1.7em;
     border-right: #B0C4DE solid 5px;
-    margin-top: 17px;
-    margin-left: 120px;
+    margin-top: 20px;
+    margin-left: 240px;
     font-size: 12px;
    }
    #description h1{
@@ -185,28 +187,31 @@ h6 {
        font-weight: bold;
    }
    .skillswrap{
-       margin-top: 120px;
-   }
-   ul.skillswrap{
-       list-style-type: circle;
+       margin-top: 100px;
+       width: 760px;
+       height: 300px;
+       margin-left: 270px;
+       background-color: white ;
    }
    .skills ul li{
-       display: block;
-       font-size: 24px;
+       width: 150px;
+       display: inline-block;
+       list-style-type: none;
+       font-size: 20px;
        font-weight: bold;
-       display: block;
-       margin-left: 800px;
-       margin-top: 25px;
+       margin-left: 20px;
+       margin-top: 56px;
        color: black;
    }
    .contact{
-       margin-top: 400px;
+       margin-top: 600px;
    }
    #contact{
     margin-left: 45%;
     margin-bottom: 60px;
     font-size: 65px;
     text-shadow: 2px 2px grey;
+    padding-top: 60px;
    }
 
    input[type=text] {
