--- a/main.css
+++ b/main.css
@@ -45,6 +45,7 @@ a:hover {
     letter-spacing: 0.04em;
     padding: 1.0em;
     background-color: #B0C4DE;
+    border-radius: 3px;
     position: fixed;
     top: 0;
     width: 100%;
